# FOC_Project

./: .mxproject  CMakeLists.txt  FOC_Project.ioc
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_it.h
Core/Src/: adc.c  can.c  dma.c  freertos.c  gpio.c  main.c  spi.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  tim.c  usart.c
User/: CMakeLists.txt
User/APP/Inc/: callback.h  user_application.h
User/APP/Src/: callback.c  user_application.c
User/BSP/Inc/: dwt.h  foc_adc.h  mt6701.h  pwm.h  vofa.h  ws2812.h
User/BSP/Src/: foc_adc.c  mt6701.c  pwm.c  vofa.c  ws2812.c
User/LIB/Inc/: foc.h
User/LIB/Src/: foc.c
cmake/stm32cubemx/: CMakeLists.txt
